--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
 .w3-btn, .w3-button {width:200px}
 a{text-decoration: none;}
-.bgimg {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-image: url('heam.jpg');
-  min-height: 100%;
-}
 </style>
 <body>
 
-<title>Hello</title>
+<title>Free Coding Tour</title>
+
+<h3>Selecciona tu curso:</h3>
+<ul>
+<li><a href="#">Introduccion a la programacion en Python</a></li>
+<li><a href="#">Numpy, algebra con Python</a></li>
+<li><a href="#">Pandas, manejo de datos con Python</a></li>
+<li><a href="#">Matplotlib, creacion de graficos con Python</a></li>
+
+</ul>
 
 
 </body>
