--- a/index.html
+++ b/index.html
@@ -3,28 +3,78 @@
 <title>Free Coding Tour</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
-.w3-row-padding img {margin-bottom: 12px}
-.w3-btn, .w3-button {width:200px}
-a{text-decoration: none;}
-</style>
+<link rel="stylesheet" type="text/css" media="all" href="./assets/styles/web.css" />
 <body>
 
-<title>Free Coding Tour</title>
+    <div class="wrapper book contents-page"
+    data-title="Template"
+    >
+<div class="masthead">
+<div class="masthead-logo">
+    <a href="http://ebw.co/template">
+        <noscript>    <img        src="../assets/images/web/logo.svg"                                    class=" inject-svg"                 alt="" /></noscript><img            data-src="../assets/images/web/logo.svg"                class=" inject-svg"         alt="" />
+    </a>
+</div>
+    <ul>
+            <li class="masthead-project-name"><a href="/index.html">Free Coding Tour</a></li>
+            <li class="masthead-book-title"><a href="#">Curso Data Science Basico</a></li>
+    </ul>
+</div><!--.masthead-->
+<div class="content">
+<h1 id="contents">Contenido</h1>
+<ol class="toc-list">
+            <li class="toc-entry-title">
+                <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/espanol/intro_programacion_python/teoria/0_intro.ipynb">
+                        <span class="toc-entry-text">
+                    1. Introduccion a la programacion en Python
+                        </span>
+                </a>
+            </li>
+            <li class="toc-entry-title">
+                <a href="#">
+                        <span class="toc-entry-text">
+                    2. Numpy, algebra con Python
+                        </span>
+                </a>
+            </li>
+            <li class="toc-entry-title">
+                <a href="#">
+                        <span class="toc-entry-text">
+                    3. Pandas, manejo de datos con Python
+                        </span>
+                </a>
+            </li>
+            <li class="toc-entry-title">
+                <a href="#">
+                        <span class="toc-entry-text">
+                    4. Matplotlib, creacion de graficos con Python
+                        </span>
+                </a>
+            </li>
+            <li class="toc-entry-title">
+                <a href="#">
+                        <span class="toc-entry-text">
+                    5. Machine Learning
+                        </span>
+                </a>
+            </li>
+            <li class="toc-entry-title">
+                <a href="#">
+                        <span class="toc-entry-text">
+                    6. Deep Learning
+                        </span>
+                </a>
+            </li>
+</ol>
+</div><!--.content-->
 
-<h3>Selecciona tu curso:</h3>
-<ul>
-<li><a href="#">Introduccion a la programacion en Python</a></li>
-<li><a href="#">Numpy, algebra con Python</a></li>
-<li><a href="#">Pandas, manejo de datos con Python</a></li>
-<li><a href="#">Matplotlib, creacion de graficos con Python</a></li>
-
-</ul>
-
+<div id="footer">
+    <div class="footer-content">
+        <p>
+            Free Coding Tour</a>
+        </p>
+    </div><!--.footer-content-->
+</div><!--#footer-->
 
 </body>
 </html>
