--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
 <h1 id="contents">Contenido</h1>
 <ol class="toc-list">
             <li class="toc-entry-title">
-                <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/espanol/intro_programacion_python/teoria/0_intro.ipynb">
+                <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/espanol/intro_programacion_python/teoria/0_intro.ipynb">
                         <span class="toc-entry-text">
                     1. Introduccion a la programacion en Python
                         </span>
                 </a>
             </li>
             <li class="toc-entry-title">
-                <a href="#">
+                <a target="_blank" href="#">
                         <span class="toc-entry-text">
                     2. Numpy, algebra con Python
                         </span>
                 </a>
             </li>
             <li class="toc-entry-title">
-                <a href="#">
+                <a target="_blank" href="#">
                         <span class="toc-entry-text">
                     3. Pandas, manejo de datos con Python
                         </span>
