--- a/index.html
+++ b/index.html
@@ -6,66 +6,33 @@
 <link rel="stylesheet" type="text/css" media="all" href="./assets/styles/web.css" />
 <body>
 
-    <div class="wrapper book contents-page"
-    data-title="Template"
-    >
+<div class="wrapper book contents-page" data-title="Free Coding Tour">
 <div class="masthead">
-<div class="masthead-logo">
-    <a href="http://ebw.co/template">
-        <noscript>    <img        src="../assets/images/web/logo.svg"                                    class=" inject-svg"                 alt="" /></noscript><img            data-src="../assets/images/web/logo.svg"                class=" inject-svg"         alt="" />
-    </a>
-</div>
+    <div class="masthead-logo">
+        <a href="/">
+            <img data-src="./assets/img/logo.svg" class="inject-svg" alt="" />
+        </a>
+    </div>
     <ul>
-            <li class="masthead-project-name"><a href="/index.html">Free Coding Tour</a></li>
-            <li class="masthead-book-title"><a href="#">Curso Data Science Basico</a></li>
+        <li class="masthead-project-name"><a href="/index.html">Free Coding Tour</a></li>
     </ul>
 </div><!--.masthead-->
 <div class="content">
-<h1 id="contents">Contenido</h1>
-<ol class="toc-list">
-            <li class="toc-entry-title">
-                <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/espanol/intro_programacion_python/teoria/0_intro.ipynb">
-                        <span class="toc-entry-text">
-                    1. Introduccion a la programacion en Python
-                        </span>
-                </a>
-            </li>
-            <li class="toc-entry-title">
-                <a target="_blank" href="#">
-                        <span class="toc-entry-text">
-                    2. Numpy, algebra con Python
-                        </span>
-                </a>
-            </li>
-            <li class="toc-entry-title">
-                <a target="_blank" href="#">
-                        <span class="toc-entry-text">
-                    3. Pandas, manejo de datos con Python
-                        </span>
-                </a>
-            </li>
-            <li class="toc-entry-title">
-                <a href="#">
-                        <span class="toc-entry-text">
-                    4. Matplotlib, creacion de graficos con Python
-                        </span>
-                </a>
-            </li>
-            <li class="toc-entry-title">
-                <a href="#">
-                        <span class="toc-entry-text">
-                    5. Machine Learning
-                        </span>
-                </a>
-            </li>
-            <li class="toc-entry-title">
-                <a href="#">
-                        <span class="toc-entry-text">
-                    6. Deep Learning
-                        </span>
-                </a>
-            </li>
-</ol>
+<h1 id="contents">Free Coding Tour</h1>
+<p>Aqui encotraras cursos de programacion faciles, gratuitos y sin publicidad</p>
+<h3>Curso Data Science Basico</h3>
+<p>
+Curso rapido para aprender lo elemental de la ciencia de datos
+<br/><a href="./espanol/es-datascience-basico.html" class="button">Ir al curso</a>
+</p>
+
+<h3>Curso Data Science Avanzado</h3>
+<p>
+Curso completo para aprender un poco de la matematica y los aspectos fundamentales 
+detras de ciencia de datos
+<br/><a href="./espanol/es-datascience-avanzado.html" class="button">Ir al curso</a>
+</p>
+
 </div><!--.content-->
 
 <div id="footer">
@@ -75,6 +42,6 @@
         </p>
     </div><!--.footer-content-->
 </div><!--#footer-->
-
+</div><!--.wrapper-->
 </body>
 </html>
