--- a/espanol/es-datascience-avanzado.html
+++ b/espanol/es-datascience-avanzado.html
@@ -15,6 +15,7 @@
         </div>
         <ul>
             <li class="masthead-project-name"><a href="../index.html">Free Coding Tour</a></li>
+            <li class="masthead-book-title"><a href="#">Curso Data Science Avanzado</a></li>
         </ul>
     </div><!--.masthead-->
 <div class="content">
