html template modified

--- a/cursos/espanol/es-datascience-basico.html
+++ b/cursos/espanol/es-datascience-basico.html
@@ -38,7 +38,7 @@
             <li class="toc-entry-title">
                 <a href="#">
                         <span class="toc-entry-text">
-                    3. Matplotlib, creacion de graficos con Python
+                    3. Seaborn, creacion de graficos con Python
                         </span>
                 </a>
             </li>
