--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -2,14 +2,14 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Free Coding Tour</title>
+        <title>Programacion Coding Tour</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
         <!--link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500&display=swap" rel="stylesheet"-->
         <!--link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,600&display=swap" rel="stylesheet"-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="../../../assets/css/style.css">
         <meta name="robots" content="noindex, follow">
     </head>
     <body>
@@ -22,12 +22,12 @@
                     </button>
                 </div>
                 <div class="p-4 pt-5">
-                    <h1 ><a href="#">Free<br/>Coding<br/>Tour</a><br/><br/></h1>
+                    <h1><a href="../../../index.html">Programacion<br/>Coding<br/>Tour</a><br/><br/></h1>
                     <ul class="list-unstyled components mb-5">
                         <li class="active">
-                            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Coding Tours</a>
+                            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Programacion Tour</a>
                             <ul class="collapse list-unstyled" id="homeSubmenu">
-                                <li><a href="./cursos/espanol/programacion/programacion.html">Programacion</a></li>
+                                <li><a href="#">Programacion</a></li>
                                 <!--li><a href="#">Data Science</a></li>
                                 <li><a href="#">Blockchain</a></li>
                                 <li><a href="#">Programacion Cuantica</a></li-->
@@ -42,35 +42,23 @@
             </nav>
 
             <div id="content" class="p-4 p-md-5 pt-5">
-                <h1 class="mb-4">Free Coding Tour</h1>
+                <h1 class="mb-4">Programacion Coding Tour</h1>
                 <p>Aqui encontraras cursos de programacion faciles, gratuitos y sin publicidad 
                     para aprender desde cero sin conocimientos previos 
                     y sin instalar ningun software ni necesitar una computadora especial</p>
+                <ol>
+                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/cursos/espanol/programacion/teoria/0_intro.ipynb">Una calculadora potente</a></li>
+                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/cursos/espanol/programacion/teoria/1_variables.ipynb">Guardando resultados en la memoria</a></li>
+                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/cursos/espanol/programacion/teoria/2_if.ipynb">Si pasa algo entonces haz esto</a></li>
+                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/cursos/espanol/programacion/teoria/3_while.ipynb">Mientras algo sea verdad</a></li>
+                </ol>
 
-                <h3><a href="./cursos/espanol/programacion/programacion.html">Programacion</a></h3>
-                <p>
-                Curso rapido de programacion. Desde cero.
-                </p>
-
-                <!--h3><a href="./cursos/espanol/datascience.html">Data Science</a></h3>
-                <p>
-                Curso rapido para aprender lo elemental de la ciencia de datos.
-                </p>
-
-                <h3><a href="./cursos/espanol/blockchain.html">Blockchain</a></h3>
-                <p>
-                Curso rapido para aprender los conceptos fundamentales de Blockchain
-                </p>
-
-                <h3><a href="./cursos/espanol/programacioncuantica.html">Programacion Cuantica</a></h3>
-                <p>
-                Curso rapido para aprender a manipular qbits.
-                </p-->
+                
             </div>
         </div>
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/js/main.js"></script>
+        <script src="../../../assets/js/jquery.min.js"></script>
+        <script src="../../../assets/js/popper.js"></script>
+        <script src="../../../assets/js/bootstrap.min.js"></script>
+        <script src="../../../assets/js/main.js"></script>
     </body>
 </html>
