--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
                     para aprender desde cero sin conocimientos previos 
                     y sin instalar ningun software ni necesitar una computadora especial</p>
 
+                <p>
+                    <ul>
+                        <li>Para que sea gratuito y sin publicidad he utilizado github y github pages.</li>
+                        <li>Para que sea interactivo y no se necesite comprar una pc especial ni instalar
+                        software especial he utilizado google colab.</li>
+                        <li>Para que sea accesible para alguien que no tiene conocimientos previos he 
+                        dejado la parte matematica cargo de python y utilizado este como una calculadora
+                        potente. Es decir, la multiplicacion de matrices, el calculo de derivadas o el
+                        calculo del minimo de una funcion son operaciones que python resolvera por mi.</li>
+                    </ul>
+                </p>
+
                 <h3><a href="./cursos/espanol/programacion/programacion.html">Programacion</a></h3>
                 <p>
                 Curso rapido de programacion. Desde cero.
