--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -22,7 +22,7 @@
                     </button>
                 </div>
                 <div class="p-4 pt-5">
-                    <h1><a href="../../../index.html">Programacion<br/>Coding<br/>Tour</a><br/><br/></h1>
+                    <h1><a href="../../../index.html">Free<br/>Coding<br/>Tour</a><br/><br/></h1>
                     <ul class="list-unstyled components mb-5">
                         <li class="active">
                             <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Programacion Tour</a>
@@ -49,8 +49,7 @@
                 <ol>
                     <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/0_intro.ipynb">Una calculadora potente</a></li>
                     <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/1_variables.ipynb">Guardando resultados en la memoria</a></li>
-                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/2_if.ipynb">Si pasa algo entonces haz esto</a></li>
-                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/3_while.ipynb">Mientras algo sea verdad</a></li>
+                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/2_condiciones.ipynb">Si pasa algo entonces haz esto</a></li>
                 </ol>
 
                 
