--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </li>
                         <li><a href="#">Sobre Nosotros</a></li>
                         <li><a href="#">Dudas y Sugerencias</a></li>
-                        <li><a href="#">Cursos Presenciales</a></li>
+                        <!--li><a href="#">Cursos Presenciales</a></li-->
                     </ul>
                     <div class="footer"></div>
                 </div>
