--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -28,7 +28,7 @@
                             <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Programacion Tour</a>
                             <ul class="collapse list-unstyled" id="homeSubmenu">
                                 <li><a href="#">Programacion</a></li>
-                                <!--li><a href="#">Data Science</a></li>
+                                <!--li><a href="#">Analisis y prediccion de datos</a></li>
                                 <li><a href="#">Blockchain</a></li>
                                 <li><a href="#">Programacion Cuantica</a></li-->
                             </ul>
@@ -41,13 +41,12 @@
 
             <div id="content" class="p-4 p-md-5 pt-5">
                 <h1 class="mb-4">Programacion Coding Tour</h1>
-                <p>Aqui encontraras cursos de programacion faciles, gratuitos y sin publicidad 
-                    para aprender desde cero sin conocimientos previos 
-                    y sin instalar ningun software ni necesitar una computadora especial</p>
+                <p>Curso rapido de programacion. Desde cero.</p>
                 <ol>
                     <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/0_intro.ipynb">Una calculadora potente</a></li>
                     <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/1_variables.ipynb">Guardando resultados en la memoria</a></li>
-                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/2_condiciones.ipynb">Si pasa algo entonces haz esto</a></li>
+                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/2_condiciones.ipynb">Comparar dos valores</a></li>
+                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/2_if.ipynb">Si pasa algo entonces has esto</a></li>
                 </ol>
 
                 
