--- a/index.html
+++ b/index.html
@@ -43,19 +43,16 @@
 
             <div id="content" class="p-4 p-md-5 pt-5">
                 <h1 class="mb-4">Free Coding Tour</h1>
-                <p>Aqui encontraras cursos de programacion faciles, gratuitos y sin publicidad 
+                <p>Aqui encontraras cursos de programacion faciles y gratuitos 
                     para aprender desde cero sin conocimientos previos 
-                    y sin instalar ningun software ni necesitar una computadora especial</p>
+                    y sin instalar ningun software ni necesitar una computadora especial:</p>
 
                 <p>
                     <ul>
-                        <li>Para que sea gratuito y sin publicidad he utilizado github y github pages.</li>
-                        <li>Para que sea interactivo y no se necesite comprar una pc especial ni instalar
-                        software especial he utilizado google colab.</li>
-                        <li>Para que sea accesible para alguien que no tiene conocimientos previos he 
-                        dejado la parte matematica cargo de python y utilizado este como una calculadora
-                        potente. Es decir, la multiplicacion de matrices, el calculo de derivadas o el
-                        calculo del minimo de una funcion son operaciones que python resolvera por mi.</li>
+                        <li>Totalmente gratuitos.</li>
+                        <li>Interactivos y sin necesidad de instalar software especial.</li>
+                        <li>El lenguaje de programacion utilizado es python.</li>
+                        <li>Accesible para alguien que no tiene conocimientos previos de computacion ni matematicas.</li>
                     </ul>
                 </p>
 
