--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -25,7 +25,7 @@
                     <h1><a href="../../../index.html">Free<br/>Coding<br/>Tour</a><br/><br/></h1>
                     <ul class="list-unstyled components mb-5">
                         <li class="active">
-                            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Programacion Tour</a>
+                            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="true" class="dropdown-toggle">Coding Tours</a>
                             <ul class="collapse list-unstyled" id="homeSubmenu">
                                 <li><a href="#">Programacion</a></li>
                                 <!--li><a href="#">Analisis y prediccion de datos</a></li>
@@ -41,12 +41,12 @@
 
             <div id="content" class="p-4 p-md-5 pt-5">
                 <h1 class="mb-4">Programacion Coding Tour</h1>
-                <p>Curso rapido de programacion. Desde cero.</p>
+                <p>Curso rapido de programacion en python. Desde cero.</p>
                 <ol>
-                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/0_intro.ipynb">Una calculadora potente</a></li>
-                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/1_variables.ipynb">Guardando resultados en la memoria</a></li>
-                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/2_condiciones.ipynb">Comparar dos valores</a></li>
-                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/3_if.ipynb">Si pasa algo entonces has esto</a></li>
+                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/0_intro.ipynb">Una calculadora potente</a></li>
+                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/1_variables.ipynb">Guardando resultados en la memoria</a></li>
+                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/2_condiciones.ipynb">Comparar dos valores</a></li>
+                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/3_if.ipynb">Si pasa algo entonces has esto</a></li>
                 </ol>
 
                 
