--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <h1 ><a href="#">Free<br/>Coding<br/>Tour</a><br/><br/></h1>
                     <ul class="list-unstyled components mb-5">
                         <li class="active">
-                            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Coding Tours</a>
+                            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="true" class="dropdown-toggle">Coding Tours</a>
                             <ul class="collapse list-unstyled" id="homeSubmenu">
                                 <li><a href="./cursos/espanol/programacion/programacion.html">Programacion</a></li>
                                 <!--li><a href="#">Data Science</a></li>
