--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -43,10 +43,11 @@
                 <h1 class="mb-4">Programacion Coding Tour</h1>
                 <p>Curso rapido de programacion en python. Desde cero.</p>
                 <ol>
-                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/0_intro.ipynb">Una calculadora potente</a></li>
-                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/1_variables.ipynb">Guardando resultados en la memoria</a></li>
-                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/2_condiciones.ipynb">Comparar dos valores</a></li>
-                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/3_if.ipynb">Si pasa algo entonces has esto</a></li>
+                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/0_intro.ipynb">Una calculadora potente</a></li>
+                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/1_variables.ipynb">Guardando resultados en la memoria</a></li>
+                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/2_condiciones.ipynb">Comparar dos valores</a></li>
+                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/3_if.ipynb">Si pasa algo entonces has esto</a></li>
+                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/4_while.ipynb">Mientras esto no cambie repite</a></li>
                 </ol>
 
                 
