Contact and meetdates added

--- a/contact.html
+++ b/contact.html
@@ -42,44 +42,17 @@
             </nav>
 
             <div id="content" class="p-4 p-md-5 pt-5">
-                <h1 class="mb-4">Free Coding Tour</h1>
-                <p>Aqui encontraras cursos de programacion faciles y gratuitos 
-                    para aprender desde cero sin conocimientos previos 
-                    y sin instalar ningun software ni necesitar una computadora especial:</p>
+                <h1 class="mb-4">Contactanos</h1>
+                <p>Puedes contactar conmigo a traves de mi email, twitter o discord:</p>
 
                 <p>
                     <ul>
-                        <li>Totalmente gratuitos.</li>
-                        <li>Interactivos y sin necesidad de instalar software especial.</li>
-                        <li>El lenguaje de programacion utilizado es python.</li>
-                        <li>Accesible para personas que no tienen conocimientos previos de computacion ni matematicas.</li>
+                        <li>Email: amiune<script>document.write("@")</script><span style="display:none">@hotmail.com</span><!-- @twitter.com -->gmail.com</li>
+                        <li>Twitter: <a target="_blank" href="https://twitter.com/__heam__">https://twitter.com/__heam__</a></li>
+                        <li>Discord: <a target="_blank" href="https://discord.gg/U2rwd4Z5">https://discord.gg/U2rwd4Z5</a></li>
                     </ul>
                 </p>
                 
-                <h2 class="mb-4">Cursos disponibles:</h2>
-                <ul>
-                    <li>
-                        <h3><a href="./cursos/espanol/programacion/programacion.html">Programacion (ir al curso)</a></h3>
-                        <p>
-                        Curso rapido de programacion. Desde cero.
-                        </p>
-                    </li>
-                </ul>
-
-                <!--h3><a href="./cursos/espanol/datascience.html">Data Science</a></h3>
-                <p>
-                Curso rapido para aprender lo elemental de la ciencia de datos.
-                </p>
-
-                <h3><a href="./cursos/espanol/blockchain.html">Blockchain</a></h3>
-                <p>
-                Curso rapido para aprender los conceptos fundamentales de Blockchain
-                </p>
-
-                <h3><a href="./cursos/espanol/programacioncuantica.html">Programacion Cuantica</a></h3>
-                <p>
-                Curso rapido para aprender a manipular qbits.
-                </p-->
             </div>
         </div>
         <script src="assets/js/jquery.min.js"></script>
