--- a/meetdates.html
+++ b/meetdates.html
@@ -42,44 +42,15 @@
             </nav>
 
             <div id="content" class="p-4 p-md-5 pt-5">
-                <h1 class="mb-4">Free Coding Tour</h1>
-                <p>Aqui encontraras cursos de programacion faciles y gratuitos 
-                    para aprender desde cero sin conocimientos previos 
-                    y sin instalar ningun software ni necesitar una computadora especial:</p>
-
-                <p>
-                    <ul>
-                        <li>Totalmente gratuitos.</li>
-                        <li>Interactivos y sin necesidad de instalar software especial.</li>
-                        <li>El lenguaje de programacion utilizado es python.</li>
-                        <li>Accesible para personas que no tienen conocimientos previos de computacion ni matematicas.</li>
-                    </ul>
+                <h1 class="mb-4">Fechas de meet</h1>
+                <p>Aqui encontraras las fechas en las que estare ayudando a eliminar dudas mediante
+                    videollamadas grupales por google meet.
                 </p>
                 
-                <h2 class="mb-4">Cursos disponibles:</h2>
+                <h2 class="mb-4">Proximas fechas:</h2>
                 <ul>
-                    <li>
-                        <h3><a href="./cursos/espanol/programacion/programacion.html">Programacion (ir al curso)</a></h3>
-                        <p>
-                        Curso rapido de programacion. Desde cero.
-                        </p>
-                    </li>
+                    <li>Por el momento no hay fechas disponibles.</li>
                 </ul>
-
-                <!--h3><a href="./cursos/espanol/datascience.html">Data Science</a></h3>
-                <p>
-                Curso rapido para aprender lo elemental de la ciencia de datos.
-                </p>
-
-                <h3><a href="./cursos/espanol/blockchain.html">Blockchain</a></h3>
-                <p>
-                Curso rapido para aprender los conceptos fundamentales de Blockchain
-                </p>
-
-                <h3><a href="./cursos/espanol/programacioncuantica.html">Programacion Cuantica</a></h3>
-                <p>
-                Curso rapido para aprender a manipular qbits.
-                </p-->
             </div>
         </div>
         <script src="assets/js/jquery.min.js"></script>
