--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -33,7 +33,8 @@
                                 <li><a href="#">Programacion Cuantica</a></li-->
                             </ul>
                         </li>
-                        <li><a href="#">Dudas y Sugerencias</a></li>
+                        <li><a href="../../../contact.html">Dudas y Sugerencias</a></li>
+                        <li><a href="../../../meetdates.html">Fechas de meet</a></li>
                     </ul>
                     <div class="footer"></div>
                 </div>
