--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -49,6 +49,7 @@
                     <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/2_condiciones.ipynb">Comparar dos valores</a></li>
                     <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/3_if.ipynb">Si pasa algo entonces has esto</a></li>
                     <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/4_while.ipynb">Mientras esto no cambie repite</a></li>
+                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/5_funciones.ipynb">Entrada -> Proceso -> Salida</a></li>
                 </ol>
 
                 
