--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <ul class="list-unstyled components mb-5">
                         <li class="active">
                             <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Coding Tours</a>
-                            <ul class="collapse list-unstyled" id="homeSubmenu">
+                            <ul class="show list-unstyled" id="homeSubmenu">
                                 <li><a href="./cursos/espanol/programacion/programacion.html">Programacion</a></li>
                                 <!--li><a href="#">Data Science</a></li>
                                 <li><a href="#">Blockchain</a></li>
