--- a/meetdates.html
+++ b/meetdates.html
@@ -24,9 +24,9 @@
                 <div class="p-4 pt-5">
                     <h1 ><a href="#">Free<br/>Coding<br/>Tour</a><br/><br/></h1>
                     <ul class="list-unstyled components mb-5">
-                        <li class="active">
+                        <li>
                             <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Coding Tours</a>
-                            <ul class="collapse list-unstyled" id="homeSubmenu">
+                            <ul class="show list-unstyled" id="homeSubmenu">
                                 <li><a href="./cursos/espanol/programacion/programacion.html">Programacion</a></li>
                                 <!--li><a href="#">Data Science</a></li>
                                 <li><a href="#">Blockchain</a></li>
@@ -34,7 +34,7 @@
                             </ul>
                         </li>
                         <li><a href="contact.html">Dudas y Sugerencias</a></li>
-                        <li><a href="meetdates.html">Fechas de meet</a></li>
+                        <li class="active"><a href="meetdates.html">Fechas de meet</a></li>
                         <!--li><a href="#">Cursos Presenciales</a></li-->
                     </ul>
                     <div class="footer"></div>
