--- a/meetdates.html
+++ b/meetdates.html
@@ -44,12 +44,18 @@
             <div id="content" class="p-4 p-md-5 pt-5">
                 <h1 class="mb-4">Fechas de meet</h1>
                 <p>Aqui encontraras las fechas en las que estare ayudando a eliminar dudas mediante
-                    videollamadas grupales por google meet.
+                    videollamadas grupales por google meet. Si no puedes unirte a la videollamada
+                    entonces puedes dejar tus dudas a traves de las 
+                    <a href="contact.html">vias de contacto</a>.
+
+                    
                 </p>
                 
                 <h2 class="mb-4">Proximas fechas:</h2>
                 <ul>
-                    <li>Por el momento no hay fechas disponibles.</li>
+                    <li><a href="https://meet.google.com/bzq-wjvn-uuv">FreeCodingTour Meet
+                        Friday, September 29 · 7:00 – 8:00pm
+                        Time zone: Europe/Madrid </a></li>
                 </ul>
             </div>
         </div>
