--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -49,7 +49,11 @@
                     <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/2_condiciones.ipynb">Comparar dos valores</a></li>
                     <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/3_if.ipynb">Si pasa algo entonces has esto</a></li>
                     <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/4_while.ipynb">Mientras esto no cambie repite</a></li>
-                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/5_funciones.ipynb">Entrada -> Proceso -> Salida</a></li>
+                    <li>
+                        <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/5_funciones.ipynb">Entrada -> Proceso -> Salida</a>
+                        <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/5.1_funciones_ejercicios.ipynb">Ejercicios extra de funciones</a></li></ul>
+                    </li>
+                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/6_funciones_ya_definidas.ipynb">Funciones ya definidas</a></li>
                 </ol>
 
                 
