listas y for added

--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -54,6 +54,8 @@
                         <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/5.1_funciones_ejercicios.ipynb">Ejercicios extra de funciones</a></li></ul>
                     </li>
                     <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/6_funciones_ya_definidas.ipynb">Funciones ya definidas</a></li>
+                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/7_listas.ipynb">Muchas variables con un solo nombre</a></li>
+                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/teoria/8_for.ipynb">Para cada elemento de una lista</a></li>
                 </ol>
 
                 
